k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /login
        pathType: Prefix
        backend:
          service:
            name: auth
            port:
              number: 80
      - path: /secure
        pathType: Prefix
        backend:
          service:
            name: hello
            port:
              number: 80
